src/test/deca/test_compilateur/context/invalid/created/decl_var/double_declaration_int.deca
// Description :
//    test d'une déclaration de variable de type int déjà existante
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.17) La variable a est déjà déclarée.

{
int a;
int a; 
// a est déclaré deux fois
}